UiMediaSoupV3WebRtcClient: fix playback on iOS and other browsers by asking for user gesture and reusing the same AudioContext for all players

--- a/teamapps-client/less/components/UiMediaSoupV3WebRtcClient.less
+++ b/teamapps-client/less/components/UiMediaSoupV3WebRtcClient.less
@@ -122,6 +122,30 @@
       justify-content: center;
       background-color: rgba(255, 255, 255, .5);
     }
+
+    .unmute-button-wrapper {
+      position: absolute;
+      z-index: 2;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .unmute-button {
+        max-width: 40%;
+        max-height: 40%;
+        filter: drop-shadow(5px 5px 5px #222);
+        transition: max-width .2s, max-height .2s;
+
+        &:hover {
+          max-width: 45%;
+          max-height: 45%;
+        }
+      }
+    }
   }
 
   .caption {
